# wmish

./: Cargo.toml  README.md
src/: com.rs  completion.rs  errors.rs  main.rs  parser.rs  shell.rs  wmi.rs
testdata/: show-processes.wmish
