[package]
name = "wmish"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
nom = "8.0.0"
rustyline = "18.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
windows = { version = "0.62.2", features = ["Win32_System_Com", "Win32_System_Wmi", "Win32_System_Ole", "Win32_Foundation", "Win32_System_Rpc", "Win32_System_Variant"] }
windows-core = "0.62.2"
